ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fe-app
            port:
              number: 80
      - path: /be-app
        pathType: Prefix
        backend:
          service:
            name: be-app
            port:
              number: 5000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: be-app
            port:
              number: 5000
